chore: add spell checker

--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "preinstall": "npx only-allow pnpm",
     "format": "biome check --write --linter-enabled=false --no-errors-on-unmatched",
-    "lint": "biome lint --fix --no-errors-on-unmatched"
+    "lint": "biome lint --fix --no-errors-on-unmatched",
+    "check:spell": "cspell --unique **"
   },
   "license": "MIT",
   "packageManager": "pnpm@9.12.1",
@@ -16,7 +17,10 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.3",
+    "@cspell/dict-fr-fr": "^2.2.5",
+    "@cspell/dict-fr-reforme": "^2.2.5",
     "@types/node": "catalog:",
+    "cspell": "^8.15.1",
     "typescript": "catalog:"
   }
 }
