--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,3 +1,9 @@
 {
-  "recommendations": ["astro-build.astro-vscode", "biomejs.biome"]
+  "recommendations": [
+    "astro-build.astro-vscode",
+    "biomejs.biome",
+    "streetsidesoftware.code-spell-checker",
+    "streetsidesoftware.code-spell-checker-french",
+    "streetsidesoftware.code-spell-checker-french-reforme"
+  ]
 }
