--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "dev": "turbo run dev",
+    "test": "turbo run test",
+    "build": "turbo run build",
     "format": "biome check --write --linter-enabled=false --no-errors-on-unmatched",
     "lint": "biome lint --fix --no-errors-on-unmatched",
     "check:spell": "cspell --unique **"
@@ -21,6 +24,7 @@
     "@cspell/dict-fr-reforme": "^2.2.5",
     "@types/node": "catalog:",
     "cspell": "^8.15.1",
+    "turbo": "^2.1.3",
     "typescript": "catalog:"
   }
 }
