--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "prepare": "lefthook install",
     "dev": "turbo run dev",
     "test": "turbo run test",
     "build": "turbo run build",
@@ -24,6 +25,7 @@
     "@cspell/dict-fr-reforme": "^2.2.5",
     "@types/node": "catalog:",
     "cspell": "^8.15.1",
+    "lefthook": "^1.7.18",
     "turbo": "^2.1.3",
     "typescript": "catalog:"
   }
