--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -4,12 +4,14 @@ packages:
   - packages/*
 
 catalog:
+  "@open-wc/testing": ^4.0.0
   "@playwright/test": ^14.1.6
   "@vitest/coverage-v8": ^2.1.2
   "@vitest/ui": ^2.1.2
   "@types/node": ^22.7.5
   esbuild: ^0.24.0
   esbuild-plugin-minify-html-literals: ^2.0.1
+  jsdom: ^25.0.1
   lit: ^3.2.1
   tslib: ^2.7.0
   tsx: ^4.19.1
