chore(lib): change typescript module resolution

--- a/lib/package.json
+++ b/lib/package.json
@@ -19,6 +19,7 @@
     "@vitest/ui": "catalog:",
     "jsdom": "catalog:",
     "tslib": "catalog:",
+    "typescript": "catalog:",
     "vitest": "catalog:"
   },
   "license": "MIT",
