chore(ui): build script and refactor

--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,7 @@
   "$schema": "https://biomejs.dev/schemas/1.9.3/schema.json",
   "files": {
     "ignoreUnknown": true,
-    "ignore": ["pnpm-lock.yaml", "node_modules", "dist"]
+    "ignore": ["pnpm-lock.yaml", "node_modules", "dist", ".coverage", ".turbo", "*.astro"]
   },
   "organizeImports": {
     "enabled": true
