--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -5,18 +5,23 @@
   "type": "module",
   "scripts": {
     "preinstall": "npx only-allow pnpm",
+    "check:types": "tsc --emitDeclarationOnly false --noEmit",
     "test": "vitest run",
-    "test:ui": "vitest --ui"
+    "test:ui": "vitest --ui",
+    "clean": "rm -rf dist",
+    "build:source": "./script/build.ts",
+    "build:types": "tsc -p tsconfig.build.json",
+    "build": "pnpm clean && pnpm build:source && pnpm build:types"
   },
   "main": "./dist/index.js",
   "exports": {
     ".": {
-      "default": "./dist/index.js",
-      "types": "./dist/index.d.ts"
+      "types": "./dist/index.d.ts",
+      "default": "./dist/index.js"
     },
     "./*": {
-      "default": "./dist/*/index.js",
-      "types": "./dist/*/index.d.ts"
+      "types": "./dist/*/index.d.ts",
+      "default": "./dist/*/index.js"
     }
   },
   "dependencies": {
@@ -24,11 +29,15 @@
     "lit": "catalog:"
   },
   "devDependencies": {
+    "@commander-js/extra-typings": "catalog:",
     "@open-wc/testing": "catalog:",
     "@vitest/coverage-v8": "catalog:",
     "@vitest/ui": "catalog:",
+    "commander": "catalog:",
+    "esbuild": "catalog:",
     "jsdom": "catalog:",
     "tslib": "catalog:",
+    "tsx": "catalog:",
     "typescript": "catalog:",
     "vitest": "catalog:"
   },
