--- a/app/package.json
+++ b/app/package.json
@@ -1,7 +1,8 @@
 {
   "name": "app",
-  "type": "module",
   "version": "0.0.0",
+  "type": "module",
+  "private": true,
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
